Fixed input align

--- a/src/ui/Input/Input.module.scss
+++ b/src/ui/Input/Input.module.scss
@@ -2,7 +2,7 @@
 
 .container {
     display: inline-flex;
-    vertical-align: middle;
+    vertical-align: top;
     align-items: center;
     box-sizing: border-box;
     transition: none;
